<resources>
    <string name="app_name">Erudition Paper</string>
    <string name="blank"> </string>
    <string name="add">ADD</string>
    <string name="continue_btn">CONTINUE</string>
    <string name="play_btn">GOOGLE PLAY</string>
    <string name="later_btn">LATER</string>
    <string name="time">Time:</string>
    <string name="marks">Marks:</string>
    <string name="repeated">Repeated:</string>
    <string name="retry">Retry</string>
    <string name="go_back">Go Back</string>
    <string name="notify_me">NOTIFY ME</string>
    <string name="referal_sample">ER007R</string>
    <string name="referal_code">Referral Code</string>
    <string name="dialog_setSemester_title">Tell us about you</string>
    <string name="dialog_setSemester_info">The Sole Purpose of this form is to personalise your app experience with relevant contents Only</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_notification">Notification</string>
    <string name="notification">Notification</string>
    <string name="app_name_first">Erudition</string>
    <string name="app_name_sec">Paper</string>
    <string name="search_text">Search Questions</string>
    <string name="search">Search</string>
    <string name="answers">Answer:</string>
    <string name="type_a_comment">Type a comment</string>
    <string name="edit_profile">Edit Details</string>
    <string name="notify_msg">You will be notified!</string>
    <string name="avatar_updated_msg">Avatar Updated!</string>
    <string name="avatar_update_fail_msg">Update Failed!</string>
    <string name="Search_no_records">No Results Found</string>
    <string name="not_set">(Not Set)</string>
    <string name="upcoming_feature">Upcoming Feature!</string>
    <string name="share_header">Share link</string>
    <string name="share_msg">To Try Erudition Paper App Visit http://play.google.com/store/apps/details?id=in.co.erudition.paper</string>
    <string name="play_store_url">http://play.google.com/store/apps/details?id=in.co.erudition.paper</string>
    <string name="select_university">Select University First</string>
    <string name="enter_college">Choose College</string>
    <string name="select_dept">Select Department Now</string>
    <string name="select_sem">Set Semester</string>
    <string name="loading_dialog">Loading …</string>
    <string name="error_dialog">Error Occurred!</string>
    <string name="error_params">Enter all details to proceed</string>
    <string name="save_txt">Now SAVE!</string>
    <string name="LATEST_VERSION_KEY" translatable="false">latest_version_android</string>
    <string name="AD_TIME" translatable="false">interstitial_ad_time</string>
    <string name="COMMON_HEAD" translatable="false">common_head</string>
    <string name="JS_ADDITION" translatable="false">js_addition</string>
    <string name="update_title">Update Available</string>
    <string name="update_msg">A new version of this app is available. Please update it</string>
    <string name="update_btn">Update</string>
    <string name="javascript">JavaScript</string>
    <string name="javascript_true">JavaScript Enabled</string>
    <string name="javascript_false">JavaScript Disabled</string>
    <string name="book_top">Coming Soon</string>
    <string name="book_bottom">Paperback Editions of Erudition Paper will be Available really soon.</string>
    <string name="offer_description">Offer Description</string>
    <string name="offer_dummy_text">Additional 5% Discount a minimum transaction of Rs.2000 using Axis Bank Credit &amp; Debit Cards Maximum discount per transaction is Rs.200 Offer Period: 4th April 2018 – 27th March 2019 (Wednesdays only) Offer is applicable on a maximum of 2 transactions per card per Wednesday Steps to avail offer: Select items to purchase for minimum of Rs.2000 Make payment using Axis Bank Credit &amp; Debit card Available On: Axis Bank Retail Credit Cards Axis Bank Retail Debit Card. LIC Credit Cards. Offer valid up to March 27,2019 </string>
    <string name="latest_offers">Latest Offers</string>
    <string name="no_subs_top">No Ongoing Subscription</string>
    <string name="no_subs_bottom">Your Current Subscriptions will start appear here</string>
    <string name="no_invoice_top">No Invoices Available</string>
    <string name="no_invoice_bottom">Your Invoices will start appear here</string>
    <string name="no_rewards_top">No Previous Rewards</string>
    <string name="no_rewards_bottom">Start Sharing with Your Friends &amp; After they Join Your Rewards will start appear here</string>
    <string name="share_top">Show some Friendship</string>
    <string name="share_bottom">Share The News so that your friends can also enjoy Erudition Paper On The Go</string>
    <string name="no_internet_top">No Internet</string>
    <string name="no_internet_bottom">Your internet connection was interrupted,  Please retry.</string>
    <string name="error_top">Some Error Occurred</string>
    <string name="error_bottom">The page you are looking for does not exist</string>
    <string name="maintenance_top">Maintenance Break</string>
    <string name="maintenance_bottom">Sorry, the servers are under maintenance. Please try again in about 30 minutes.</string>
    <string name="page_not_found_top">Page Not Found</string>
    <string name="page_not_found_bottom">The Page You are Looking for is not available</string>
    <string name="coming_soon_top">Coming Soon</string>
    <string name="coming_soon_bottom">We are about to add these Papers really soon So Click Notify Me so we can Inform You on your Registered Email Id when it became Live</string>
    <string name="no_papers">No Papers Found</string>
    <string name="dialog_google_play">Glad to see you Like Erudition Paper!\n If you\'re up for it, we would really appreciate you reviewing us.</string>
    <string name="awesome">Awesome!</string>
    <string name="like_erudition">Like Erudition Paper?</string>
    <string name="faq">F.A.Q.</string>
    <string name="feedback_success">Feedback Submitted!</string>
    <string name="submit_btn">Submit</string>
    <string name="submit_a_prob">Contact Support</string>
    <string name="subject_help">Subject</string>
    <string name="issues_faced">Issue Faced</string>
    <string name="state_issues">State your Issue Here…</string>
    <string name="offline_paper">Offline Papers</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="recent_papers">Recent Papers</string>
    <string name="fb_messenger">Facebook Messenger</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="phone">Phone</string>
    <string name="mobile">Mobile</string>
    <string name="email">E-Mail</string>
    <string name="university_p">University</string>
    <string name="college">College</string>
    <string name="department">Department</string>
    <string name="semester_p">Semester</string>
    <string name="academic_details">Academic Details</string>
    <string name="personal_details">Personal Details</string>
    <string name="gender">Gender</string>
    <string name="dob">Date of Birth</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="successfully_updated">Successfully Updated</string>
    <string name="error_occurred">Error Occurred</string>
    <string name="profile">Profile</string>
    <string name="order_history">Order History</string>
    <string name="offers">Offers</string>
    <string name="rewards">Rewards</string>
    <string name="announcements">Announcements</string>
    <string name="books">Books</string>
    <string name="help">Help &amp; Feedback</string>
    <string name="setting">Settings</string>
    <string name="privacy_p">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="about">About Erudition Paper</string>
    <string name="no_notification">No New Notifications</string>
    <string name="account">Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_message">Failed Contact Administrator</string>
    <string name="app_account">Application</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="dismiss">Dismiss</string>
    <string name="snackBar_clear_cache">App Cache Cleared!</string>
    <string name="adMob_toggle">AdMob Toggle</string>
    <string name="dev_title">Developer Options</string>
    <string name="base_url">Base Url</string>
    <string name="save_url">Save</string>
    <string name="sending">Sending…</string>
    <string name="change_pass_dialog" translation_description="Alert dialog displayed after password recovery email is sent">Follow the instructions sent to %1$s to change your password.</string>
    <string name="change_pass_title">New \nPassword</string>
    <string name="change_pass_desc">Enter the code received in </string>
    <string name="Secret_code">Secret Code</string>
    <string name="New_pass">New Password</string>
    <string name="action_logout">Sign Out</string>
    <string name="action_settings">Settings</string>
    <string name="action_history">History</string>
    <string name="action_share">Share</string>
    <string name="action_offline_1">Make Offline</string>
    <string name="action_offline_2">Remove Offline</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="action_info">info</string>
    <string name="action_photo">photo</string>
    <string name="university">University</string>
    <string name="choose_university">Choose Your University</string>
    <string name="choose_course">Choose Your Course</string>
    <string name="university_name">University Name</string>
    <string name="chapter_wise">Chapter\nWise</string>
    <string name="year_wise">Year\nWise</string>
    <string name="chapter_wise_new">Chapter View</string>
    <string name="year_wise_new">Year View</string>
    <string name="syllabus">Syllabus</string>
    <string name="facebook_application_id" translatable="false">1830176010527608</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1830176010527608</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-5088140684773836~3500871325</string>
    <string name="admob_smart_banner_id" translatable="false">ca-app-pub-5088140684773836/8817825614</string>
    <string name="admob_interstitial_ad_id" translatable="false">ca-app-pub-5088140684773836/9561304916</string>
    <string name="tos_url" translatable="false">https://paper.erudition.co.in/terms-and-conditions</string>
    <string name="pp_url" translatable="false">https://paper.erudition.co.in/privacy-policy</string>
    <string name="about_url" translatable="false">https://paper.erudition.co.in/about</string>
    <string name="faq_url" translatable="false">https://paper.erudition.co.in/faq</string>
    <string name="Rs">\u20B9</string>
    <string name="rs">\u20A8</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_book">BookActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="title_activity_paper">PaperActivity</string>
    <string name="title_activity_reward">RewardActivity</string>
    <string name="title_activity_reward_history">RewardHistoryActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_offer">OfferActivity</string>
    <string name="title_activity_question">QuestionActivity</string>
</resources>