<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/main_options"
        android:checkableBehavior="none">
        <!--make it single -->
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_order"
            android:title="@string/order_history" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_offer"
            android:title="@string/offers" />
        <item
            android:id="@+id/nav_rewards"
            android:icon="@drawable/ic_rewards_24dp"
            android:title="@string/rewards" />
        <item
            android:id="@+id/nav_books"
            android:icon="@drawable/ic_book"
            android:title="@string/books" />
    </group>

    <group
        android:id="@+id/extra"
        android:checkableBehavior="none">
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/setting" />
    </group>

</menu>
