<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- First button is the initial Fab of the menu -->
    <!-- Title here can be empty if you don't to add any action in the main button -->
    <item
        android:id="@+id/main_option"
        android:icon="@drawable/ic_info"
        android:title=""/>

    <!-- Options buttons of the Fab menu -->
    <item
        android:id="@+id/offline_papers"
        android:icon="@drawable/ic_offline"
        android:title="@string/offline_paper" />

    <item
        android:id="@+id/bookmarks"
        android:icon="@drawable/ic_bookmark_24px"
        android:title="@string/bookmarks" />

    <item
        android:id="@+id/recent_papers"
        android:icon="@drawable/ic_access_time_black_24dp"
        android:title="@string/recent_papers" />

</menu>