<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="in.co.erudition.paper.activitiy.OrderActivity">
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_offline"
        android:orderInCategory="101"
        android:checkable="true"
        android:title="@string/action_offline_1"
        app:actionLayout="@layout/menu_switch"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_bookmark"
        android:orderInCategory="102"
        android:checkable="true"
        android:title="@string/action_bookmark"
        app:actionLayout="@layout/menu_switch"
        app:showAsAction="never" />
</menu>
