<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/img_no_internet"
    android:background="@color/default_bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TopTextView"
            android:text="@string/no_internet_top"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_no_net"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/toolbar_offset"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_no_internet" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="@dimen/bottom_tv_width_max"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/BottomTextView"
            android:text="@string/no_internet_bottom"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_retry"
            style="@style/AddButton"
            android:layout_margin="@dimen/btn_margin"
            android:layout_gravity="center_horizontal"
            android:elevation="8dp"
            android:text="@string/retry" />

    </LinearLayout>

</FrameLayout>
