<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_info"
    android:layout_width="@dimen/card_info_h_w"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/google_play"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacer_8dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialogue_group_desc_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacer_8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/awesome"
            android:textColor="@color/colorPrimary" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialogue_group_desc_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_google_play"
            android:layout_marginStart="@dimen/spacer_8dp"
            android:layout_marginEnd="@dimen/spacer_8dp"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/spacer_8dp"
        android:paddingEnd="@dimen/spacer_8dp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            style="@style/ContinueFlatButton"
            android:layout_margin="@dimen/spacer_8dp"
            android:text="@string/later_btn"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            style="@style/FlatButton_purple"
            android:layout_margin="@dimen/spacer_8dp"
            android:text="@string/play_btn"/>

    </LinearLayout>

</LinearLayout>


