<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/img_400_error"
    android:layout_gravity="center"
    android:background="@color/default_bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TopTextView"
            android:text="@string/error_top"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/toolbar_offset"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/error" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="@dimen/bottom_tv_width_max"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/BottomTextView"
            android:text="@string/error_bottom"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_go_back"
            style="@style/AddButton"
            android:layout_width="@dimen/add_btn_width"
            android:layout_height="@dimen/add_btn_height"
            android:background="@drawable/btn_add"
            android:layout_margin="@dimen/btn_margin"
            android:layout_gravity="center_horizontal"
            android:elevation="8dp"
            android:text="@string/go_back"
            android:textAlignment="center"
            android:textAppearance="@style/AddText"/>

    </LinearLayout>

</FrameLayout>