<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/img_404_not_found"
    android:layout_gravity="center"
    android:background="@color/colorMaterialBlack_no_alpha"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TopTextView_404"
            android:text="@string/page_not_found_top"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/toolbar_offset"
            android:layout_marginBottom="@dimen/toolbar_offset"
            android:layout_marginStart="@dimen/spacer_16dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/page_not_found" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/BottomTextView_404"
            android:text="@string/page_not_found_bottom"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_go_back"
            style="@style/AddButton.Dark"
            android:layout_margin="@dimen/btn_margin"
            android:layout_gravity="center_horizontal"
            android:elevation="8dp"
            android:text="@string/go_back"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/colorWhite90alpha"
        android:layout_marginStart="@dimen/spacer_16dp"
        android:layout_marginTop="@dimen/nav_bar_height"
        android:padding="@dimen/spacer_6dp"
        android:layout_gravity="top|start"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp"/>

</FrameLayout>