<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="in.co.erudition.paper.activitiy.PaperActivity"
    tools:showIn="@layout/activity_paper">

    <LinearLayout
        android:id="@+id/paper_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/recycler_view_offset">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeToRefresh3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_paper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:scrollbars="vertical"
                android:padding="@dimen/item_offset"
                android:background="@color/colorTransparent"/>

        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/img3_404_not_found"
        android:paddingTop="@dimen/spacer_32dp"
        android:layout_gravity="center"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TopTextView"
            android:text="@string/no_internet_top"/>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_no_net"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/toolbar_offset"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_no_internet" />

        <TextView
            android:layout_width="@dimen/bottom_tv_width_max"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/BottomTextView"
            android:text="@string/no_internet_bottom"/>

        <Button
            android:id="@+id/btn_retry"
            style="@style/AddButton"
            android:layout_width="@dimen/add_btn_width"
            android:layout_height="@dimen/add_btn_height"
            android:background="@drawable/btn_add"
            android:layout_margin="@dimen/btn_margin"
            android:layout_gravity="center_horizontal"
            android:elevation="8dp"
            android:text="@string/retry"
            android:textAlignment="center"
            android:textAppearance="@style/AddText"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_paper_found"
        android:paddingTop="@dimen/spacer_32dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TopTextView"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:text="@string/no_papers"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
