<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_primary_solid"
    tools:context=".activity.SyllabusActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height_help"
        android:background="@drawable/bg_white"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleGravity="start|bottom"
            app:collapsedTitleGravity="start"
            app:collapsedTitleTextAppearance="@style/collapsedTitleTextAppearance.Black"
            app:title="@string/university_name"
            app:expandedTitleTextAppearance="@style/expandedTitleTextAppearance.Transparent"
            app:contentScrim="@color/colorWhite"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <!--To fix it enterAlways-->

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/university_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/fab_margin"
                android:paddingStart="@dimen/uni_name_padding"
                android:paddingEnd="@dimen/uni_name_padding"
                android:text="@string/university_name"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.85"
                android:textAppearance="@style/TitleTextCourseDark"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_height"
                android:theme="@style/ToolBarStyle.dark"
                android:layout_marginTop="@dimen/status_bar_height"
                android:title="@string/app_name"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_syllabus" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/admob_smart_banner_id">
    </com.google.android.gms.ads.AdView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>